# codereview

./: .gitignore  README.md  ROADMAP.md  THEMING.md  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  ubt.toml  vite.config.ts  vitest.config.ts
docs/: signing.md
specs/: 00-overview.md  01-comment-markdown.md  01-re-anchoring.md  02-auto-refresh.md  02-pr-metadata-backend.md  03-pr-metadata-frontend.md  03-publish-commit-id-freshness.md  04-pr-threads-backend.md  04-toolchain-pinning.md  05-ci-checks.md  05-pr-threads-frontend.md  06-release-pipeline.md  07-auto-update.md  08-code-signing-readiness.md  09-diff-expand-edges.md  10-pr-target-base-sha.md  11-threaded-replies.md  12-resolve-threads.md  13-suggested-changes.md  14-keyboard-nav.md  15-word-level-highlight.md  16-left-side-reanchoring.md  17-capture-github-comment-ids.md  18-github-thread-replies-resolve.md  19-pending-reviews.md  20-pr-list-refresh.md  ORCHESTRATION.md  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anchor.rs  error.rs  export.rs  gh.rs  git.rs  inbox.rs  lib.rs  main.rs  path_env.rs  provider.rs  tools.rs
src-tauri/src/commands/: editor.rs  export.rs  gh.rs  inbox.rs  mod.rs  repo.rs  review.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/db/migrations/: 0001_init.sql  0002_file_view_state.sql  0003_comment_subject_type.sql  0004_comment_origin.sql  0005_repo_remote_index.sql  0006_inbox.sql  0007_comment_resolved.sql  0008_comment_anchored_base_sha.sql  0009_review_status_pending.sql
(+95 files in other folders)
